Avoid linebreak in dropdown title
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@66654 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/component-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/component-styles.scss
@@ -180,6 +180,7 @@
             width: 100%;
             height: 24px;
             padding-top: 10px;
+            white-space: nowrap;
         }
 
         .selectedOptionLabel {
@@ -192,7 +193,6 @@
 
     .dropDownPopup {
         overflow-y: auto;
-       // max-height: 50%;
 
         .dropDownElement {
             padding-left: 24px;
